--- a/examples/en/mcp-integration/document-analyzer.yml
+++ b/examples/en/mcp-integration/document-analyzer.yml
@@ -5,7 +5,7 @@ input_parameters:
   - name: "document"
     type: "string"
     required: true
-    description: "Document content or file path (supports @file: prefix for loading files)"
+    description: "Document content (use @file:document: path format for MCP file loading)"
   - name: "analysis_type"
     type: "string"
     required: false
@@ -18,34 +18,6 @@ input_parameters:
     description: "Output format: 'structured', 'json', or 'plain_text'"
 
 steps:
-  - id: "load_document"
-    type: "conditional"
-    condition: "{{ document.startswith('@file:') }}"
-    if_true:
-      - id: "process_file_input"
-        type: "text_process"
-        method: "extract_between_marker" 
-        input: "{{ document }}"
-        begin: "@file:"
-        end: ""
-        output_key: "file_spec"
-      - id: "set_document_content"
-        type: "text_process"
-        method: "replace"
-        input: "File content will be processed by unified input processor"
-        replacements:
-          - find: "File content will be processed by unified input processor"
-            replace: "{{ document }}"
-        output_key: "processed_document"
-    if_false:
-      - id: "use_direct_content"
-        type: "text_process"
-        method: "replace"
-        input: "{{ document }}"
-        replacements:
-          - find: ""
-            replace: ""
-        output_key: "processed_document"
 
   - id: "analyze_document"
     type: "ai_call"
@@ -53,7 +25,7 @@ steps:
       Please analyze the following document based on the requested analysis type: {{ analysis_type }}
 
       Document Content:
-      {{ load_document.processed_document if load_document.processed_document else document }}
+      {{ document }}
 
       Analysis Instructions:
       {% if analysis_type == "comprehensive" %}
@@ -102,7 +74,7 @@ steps:
 
       **Analysis Type:** {{ analysis_type }}
       **Output Format:** {{ output_format }}
-      **Document Length:** {{ (load_document.processed_document if load_document.processed_document else document) | length }} characters
+      **Document Length:** {{ document | length }} characters
 
       ## Analysis Results
 
