--- a/examples/ja/mcp-integration/document-analyzer.yml
+++ b/examples/ja/mcp-integration/document-analyzer.yml
@@ -5,7 +5,7 @@ input_parameters:
   - name: "document"
     type: "string"
     required: true
-    description: "文書内容またはファイルパス（ファイル読み込みには@file:プレフィックスを使用）"
+    description: "文書内容（MCPファイル読み込みは@file:document: パス形式を使用）"
   - name: "analysis_type"
     type: "string"
     required: false
@@ -18,34 +18,6 @@ input_parameters:
     description: "出力形式: 'structured'（構造化）、'json'、または'plain_text'（プレーンテキスト）"
 
 steps:
-  - id: "load_document"
-    type: "conditional"
-    condition: "{{ document.startswith('@file:') }}"
-    if_true:
-      - id: "process_file_input"
-        type: "text_process"
-        method: "extract_between_marker" 
-        input: "{{ document }}"
-        begin: "@file:"
-        end: ""
-        output_key: "file_spec"
-      - id: "set_document_content"
-        type: "text_process"
-        method: "replace"
-        input: "ファイル内容は統合入力プロセッサによって処理されます"
-        replacements:
-          - find: "ファイル内容は統合入力プロセッサによって処理されます"
-            replace: "{{ document }}"
-        output_key: "processed_document"
-    if_false:
-      - id: "use_direct_content"
-        type: "text_process"
-        method: "replace"
-        input: "{{ document }}"
-        replacements:
-          - find: ""
-            replace: ""
-        output_key: "processed_document"
 
   - id: "analyze_document"
     type: "ai_call"
@@ -53,7 +25,7 @@ steps:
       以下の文書を解析してください。解析タイプ: {{ analysis_type }}
 
       文書内容:
-      {{ load_document.processed_document if load_document.processed_document else document }}
+      {{ document }}
 
       解析指示:
       {% if analysis_type == "comprehensive" %}
@@ -102,7 +74,7 @@ steps:
 
       **解析タイプ:** {{ analysis_type }}
       **出力形式:** {{ output_format }}
-      **文書長:** {{ (load_document.processed_document if load_document.processed_document else document) | length }} 文字
+      **文書長:** {{ document | length }} 文字
 
       ## 解析結果
 
