Update default provider version and enhance example workflow names for clarity

--- a/examples/en/text-processing/json-extractor.yml
+++ b/examples/en/text-processing/json-extractor.yml
@@ -1,4 +1,4 @@
-name: "JSON Data Extraction & Formatting"
+name: "JSON Data Extraction and Formatting"
 description: "A workflow that extracts JSON data from text and retrieves specified fields"
 
 input_parameters:
