--- a/examples/ja/text-processing/advanced-text-processing.yml
+++ b/examples/ja/text-processing/advanced-text-processing.yml
@@ -1,4 +1,4 @@
-name: "高度なテキスト処理デモンストレーション"
+name: "Advanced Text Processing Demonstration"
 description: "v0.4.0の新しいテキスト処理機能を実演します"
 version: "0.4.0"
 
