--- a/examples/ja/text-processing/basic-text-methods-demo.yml
+++ b/examples/ja/text-processing/basic-text-methods-demo.yml
@@ -1,4 +1,4 @@
-name: "基本テキスト処理メソッドデモ"
+name: "Basic Text Processing Methods Demo"
 description: "新しいv1.1.0基本テキスト処理メソッドのデモンストレーション"
 version: "1.0.0"
 
