feat: Consolidate CSV/TSV parsing into a unified processing step; add YAML parsing capabilities
- Merged csv_parse.py and tsv_parse.py into CsvParseStep for flexible delimiter handling.
- Introduced TsvParseStep for backward compatibility.
- Implemented YamlParseStep for YAML parsing with error handling.
- Updated documentation to reflect new text processing features and examples.
- Added advanced CSV processing example demonstrating custom delimiters and data transformations.
- Implemented auto-continuation for AI responses to handle truncated outputs.
- Introduced large output control mechanisms for managing extensive document analysis.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "httpx>=0.25.0",
     "jsonschema>=4.0.0",
     "fastmcp>=2.8.1",
+    "aiofiles>=23.0.0",
 ]
 
 [project.optional-dependencies]
@@ -161,5 +162,6 @@ directory = "htmlcov"
 [dependency-groups]
 dev = [
     "build>=1.2.2.post1",
+    "types-aiofiles>=24.1.0.20250606",
     "types-jsonschema>=4.24.0.20250528",
 ]
